TodoApi/k8s/todo-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-api-deployment
  namespace: todo-api
  labels:
    app.kubernetes.io/name: todobreno
    app.kubernetes.io/version: 'v0.1'
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: todobreno
      app.kubernetes.io/version: 'v0.1'
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: todobreno
        app.kubernetes.io/version: 'v0.1'
    spec:
      containers:
      - name: todobreno-container
        image: 'todo-api:latest'
        imagePullPolicy: Never
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: '100m'
            memory: '512Mi'
      restartPolicy: 'Always'

---
apiVersion: v1
kind: Service
metadata:
  name: todo-api-service
  namespace: todo-api
  labels:
    app.kubernetes.io/name: todobreno-service
    app.kubernetes.io/version: 'v0.1'
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: todobreno
    app.kubernetes.io/version: 'v0.1'
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
